--- a/src/fools/index.html
+++ b/src/fools/index.html
@@ -392,7 +392,7 @@
         <div class="text">分享后，再次扫码可查看留言</div>
       </div>
     </div>
-    <div class="page page3 active" id="page3">
+    <div class="page page3" id="page3">
       <div class="chatListBox">
         <div class="chatBox">
           <div class="newsList newsList1 active">
@@ -515,16 +515,16 @@
               <div class="publish"><button class="refresh" type="button">发送</button></div>
             </form>
             <ul class="msgList msgList1">
-              <li>为什么要创业？嫌发际线太低吗？</li>
-              <li>0.08红包祝你发财，将来不用分红，退群了886</li>
-              <li>你准备干啥，是去要饭呢还是去卖身？</li>
-              <li>兄弟，你这是非法集资啊</li>
+              <li>什么情况？他发现孩子不是亲生的了？</li>
+              <li>跟你说过多少次，家暴这习惯得改</li>
+              <li>天天袜子都不洗，不和你离和谁离</li>
+              <li>我帮你开个精神病证明，你去砍死他吧</li>
             </ul>
             <ul class="msgList msgList2">
-              <li>一入微商深似海</li>
-              <li>没钱支持，我去给你买几个橘子…</li>
-              <li>你不会被骗了吧，要是被迫的，你就打个笑脸</li>
-              <li>别告诉我这就是你的项目——拉群圈钱</li>
+              <li>对不起...其实我和他早就...</li>
+              <li>无限制喝酒蹦迪…了解一下？</li>
+              <li>您这是玩儿真心话大冒险呐？</li>
+              <li>还是赶紧找你老公腻歪去吧，被消遣我们了</li>
             </ul>
           </div>
           <div class="btnActions">
@@ -567,144 +567,374 @@
       </div>
       <div class="shareModa">
         <!-- <img class="shareImg" src="./images/canvas.png" alt=""> -->
-        <img class="shareImg" src="./images/result2.png" alt="">
+        <img class="shareImg" src="./images/result3.png" alt="">
+        <div class="close"></div>
+        <div class="title"><img src="./images/shou.png">长按分享图片</div>
+        <div class="text">分享后，再次扫码可查看留言</div>
+      </div>
+    </div>
+    <div class="page page4" id="page4">
+      <div class="chatListBox">
+        <div class="chatBox">
+          <div class="newsList newsList1 active">
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                    刚撕了公司那个碧池真是大快人心！
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated right">
+              <div class="photo">
+                <img src="./images/photo6.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox msgBox1">
+                    我们公司的碧池帮我顺手撕一下？
+                    <div class="triangle triangle1"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      <a class="link link1">点击生成你的“愚乐”群聊</a>
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+          </div>
+          <div class="newsList newsList2">
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                    因为一些特殊原因，我要回老家 了，就不一一道别了，祝各位一 切顺利！
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+                <div class="photo">
+                  <img src="./images/photo3.png" alt="">
+                </div>
+                <div class="msg">
+                    <span class="msgBox">
+                        回老家也可以用BOSS直聘找到 好工作！
+                      <div class="triangle"></div>
+                    </span>
+                </div>
+              </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo2.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      别走了，留下了一起吃喝玩乐吧
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo4.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      回朝鲜也好，毕竟你在理也算富 翁～
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo5.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      被绿了也没什么大不了的
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated right">
+              <div class="photo">
+                <img src="./images/photo6.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox msgBox1">
+                      离开干嘛？你去哪都拉低GDP
+                    <div class="triangle triangle1"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      算你狠！有胆你也试试你朋友怎么说你！<a class="link link2">点击生成你的专属答题码</a>
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+          </div>
+          <div class="formBox">
+            <form class="msgForm">
+              <input type="text" placeholder="自拟答案">
+              <div class="publish"><button class="refresh" type="button">发送</button></div>
+            </form>
+            <ul class="msgList msgList1">
+              <li>那个装傻白甜的绿茶婊终于有报应了！</li>
+              <li>我们公司的碧池帮我顺手撕一下？</li>
+              <li>哎犯不着这样，直接毒死就行了 ！</li>
+              <li>女人一定要有事业，欢迎加入天使爱微商团队！</li>
+            </ul>
+            <ul class="msgList msgList2">
+              <li>来，姐妹们计划一下，下一位撕谁？</li>
+              <li>就你这个怂样，最多拌了几句嘴</li>
+              <li>你不是知道她爸是CEO么？找好下家啦?</li>
+              <li>明明今天在办公室看到你被骂……</li>
+            </ul>
+          </div>
+          <div class="btnActions">
+            <div class="btn btn1" data-status="1">呵呵我信了</div>
+            <div class="btn btn2" data-status="0">滚蛋你骗人</div>
+          </div>
+        </div>
+      </div>
+      <div class="ModaList">
+        <div class="actions">
+          <div class="btn btn1">呵呵我信了</div>
+          <div class="btn btn2">滚蛋你骗人</div>
+        </div>
+        <div class="list">
+          <div class="cell">
+            <span>哥舒：</span>有钱买车票么？
+          </div>
+          <div class="cell">
+            <span>星星：</span>滚滚滚，赶紧滚！ 
+          </div>
+          <div class="cell">
+            <span>庚总：</span>巴黎圣母院少个敲钟的，就你了！ 
+          </div>
+          <div class="cell">
+            <span>若白：</span>把欠我的钱先还了！
+          </div>
+          <div class="cell">
+            <span>森森：</span>你走吧，走了就别再回来
+          </div>
+          <div class="cell">
+            <span>李荣浩：</span>别走了，在哪你都拉低GDP
+          </div>
+          <div class="cell">
+            <span>小野：</span>被绿了没什么大不了的
+          </div>
+          <div class="cell">
+            <span>喵呜：</span>还是再拼俩年吧～如果还是没混出来再回去也不迟啊！
+          </div>
+        </div>
+      </div>
+      <div class="shareModa">
+        <!-- <img class="shareImg" src="./images/canvas.png" alt=""> -->
+        <img class="shareImg" src="./images/result4.png" alt="">
+        <div class="close"></div>
+        <div class="title"><img src="./images/shou.png">长按分享图片</div>
+        <div class="text">分享后，再次扫码可查看留言</div>
+      </div>
+    </div>
+    <div class="page page5" id="page5">
+      <div class="chatListBox">
+        <div class="chatBox">
+          <div class="newsList newsList1 active">
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                    实习生小妹竟然撩我把持不住了怎么整？
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated right">
+              <div class="photo">
+                <img src="./images/photo6.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox msgBox1">
+                    房间已开好，叫我雷锋
+                    <div class="triangle triangle1"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      <a class="link link1">点击生成你的“愚乐”群聊</a>
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+          </div>
+          <div class="newsList newsList2">
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                    因为一些特殊原因，我要回老家 了，就不一一道别了，祝各位一 切顺利！
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+                <div class="photo">
+                  <img src="./images/photo3.png" alt="">
+                </div>
+                <div class="msg">
+                    <span class="msgBox">
+                        回老家也可以用BOSS直聘找到 好工作！
+                      <div class="triangle"></div>
+                    </span>
+                </div>
+              </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo2.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      别走了，留下了一起吃喝玩乐吧
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo4.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      回朝鲜也好，毕竟你在理也算富 翁～
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo5.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      被绿了也没什么大不了的
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated right">
+              <div class="photo">
+                <img src="./images/photo6.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox msgBox1">
+                      离开干嘛？你去哪都拉低GDP
+                    <div class="triangle triangle1"></div>
+                  </span>
+              </div>
+            </div>
+            <div class="newsItem fadeIn animated left">
+              <div class="photo">
+                <img src="./images/photo1.png" alt="">
+              </div>
+              <div class="msg">
+                  <span class="msgBox">
+                      算你狠！有胆你也试试你朋友怎么说你！<a class="link link2">点击生成你的专属答题码</a>
+                    <div class="triangle"></div>
+                  </span>
+              </div>
+            </div>
+          </div>
+          <div class="formBox">
+            <form class="msgForm">
+              <input type="text" placeholder="自拟答案">
+              <div class="publish"><button class="refresh" type="button">发送</button></div>
+            </form>
+            <ul class="msgList msgList1">
+              <li>老子连半个妹子都没有！嫉妒使我插兄弟两刀</li>
+              <li>我去给嫂子送一束西兰花</li>
+              <li>现在的女生，就是这么不检点——她微信多少？ ！</li>
+              <li>房间已开好，叫我雷锋</li>
+            </ul>
+            <ul class="msgList msgList2">
+              <li>你有什么毛病？顺手帮你带瓶水叫撩你？</li>
+              <li>贾英俊将“嫂子”加入群聊</li>
+              <li>别误会，没脱衣服都不叫撩，顶多算撒娇?</li>
+              <li>你这是说梦话呢？公司就一个实习生还是个男的</li>
+            </ul>
+          </div>
+          <div class="btnActions">
+            <div class="btn btn1" data-status="1">呵呵我信了</div>
+            <div class="btn btn2" data-status="0">滚蛋你骗人</div>
+          </div>
+        </div>
+      </div>
+      <div class="ModaList">
+        <div class="actions">
+          <div class="btn btn1">有××个人信了</div>
+          <div class="btn btn2">有××个人揭穿</div>
+        </div>
+        <div class="list">
+          <div class="cell">
+            <span>哥舒：</span>有钱买车票么？
+          </div>
+          <div class="cell">
+            <span>星星：</span>滚滚滚，赶紧滚！ 
+          </div>
+          <div class="cell">
+            <span>庚总：</span>巴黎圣母院少个敲钟的，就你了！ 
+          </div>
+          <div class="cell">
+            <span>若白：</span>把欠我的钱先还了！
+          </div>
+          <div class="cell">
+            <span>森森：</span>你走吧，走了就别再回来
+          </div>
+          <div class="cell">
+            <span>李荣浩：</span>别走了，在哪你都拉低GDP
+          </div>
+          <div class="cell">
+            <span>小野：</span>被绿了没什么大不了的
+          </div>
+          <div class="cell">
+            <span>喵呜：</span>还是再拼俩年吧～如果还是没混出来再回去也不迟啊！
+          </div>
+        </div>
+      </div>
+      <div class="shareModa">
+        <!-- <img class="shareImg" src="./images/canvas.png" alt=""> -->
+        <img class="shareImg" src="./images/result5.png" alt="">
         <div class="close"></div>
         <div class="title"><img src="./images/shou.png">长按分享图片</div>
         <div class="text">分享后，再次扫码可查看留言</div>
       </div>
     </div>
   </body>
-  <script>
-    (function() {
-      //生成二维码
-      new QRCode(document.querySelector(".qrcode"), 'https://github.com/zjj131415')
-      //图片数组
-      var data=['http://wx.qlogo.cn/mmopen/vi_32/M5bIsGJ28pulMQ2iadpTo3Wf2dROjlUAdO1Q8stJW3CHPdfa3IyRbAof8EHRbhM33ZP0pPRuibTpWGnh2K3qibvSw/0', './images/canvas.png', './images/qrBg.jpg', './images/qrBg.jpg', './images/qrLog.png'],
-          base64=[];
-      //显示隐藏
-      $('.btn').on('click', function() {
-        var status = $(this).data('status');
-        $('.page.active .msgList').removeClass('active');
-        !(status | 0) ? $('.page.active .msgList2').addClass('active') : $('.page.active .msgList1').addClass('active');
-        $('.page.active .btnActions').removeClass("active");
-        $('.page.active .formBox').show();
-        // $('.msgList').show();
-        document.querySelector('.page.active .chatListBox').scrollTop = $('.page.active .chatBox').height() - $('.page.active .chatListBox').height();
-      });
-      $('.page.active .msgForm input').focus(function() {
-        $('.page.active .msgList').removeClass('active');
-        // $('.msgList').hide();
-      })
-      $('.page.active .msgForm input').blur(function(e) {
-        console.log(e)
-        $('.page.active .formBox').hide();
-        $('.page.active .btnActions').addClass("active");
-      });
-      //关闭分享图
-      $('.page.active .close').click(function() {
-        $('.page.active .shareModa').hide();
-      })
-      //点击生成图片
-      $('.page.active .link2').click(function() {
-        $('.shareModa').show();
-        // draw(function(share) {
-        //   $('.shareImg').attr('src', share);
-        //   $('.shareModa').show();
-        // })
-      });
-      // 点击生成“愚乐”群聊
-      $('.page.active .link1').click(function() {
-        $(".page.active .newsList1").removeClass("active");
-        $(".page.active .newsList2").addClass("active");
-        $('.page.active .btnActions').addClass("active");
-        listShow($('.page.active .newsList2'));
-      });
-
-      //一个一个显示，需要添加active；
-      listShow($('.page.active .newsList1'));
-
-      // 刷新页面
-      $(".page.active .refresh").click(function(){
-        window.history.go(0);
-      });
-      
-      function listShow(obj){
-        var timeCount = null;
-        var count = 0;
-        timeCount = setInterval(function() {
-          obj.find('.newsItem').eq(count).addClass('active');
-          count ++;
-          document.querySelector('.page.active .chatListBox').scrollTop = $('.page.active .chatBox').height() - $('.page.active .chatListBox').height();
-          if (count > obj.find('.newsItem').length) return clearInterval(timeCount);
-        }, 300)
-      }
-
-      //合成图片
-      function draw(fn){
-        var c=document.createElement('canvas'),
-          ctx=c.getContext('2d'),
-          len=data.length;
-        c.width=750;
-        c.height=1334;
-        ctx.rect(0,0,c.width,c.height);
-        ctx.fillStyle='#1c1f70';
-        ctx.fill();
-        function drawing(n){
-          if(n<len){
-            var x = 0;
-            var y = 0;
-            var w = "";
-            var h = "";
-            switch (n | 0) {
-              case 0:
-                x = 303;
-                y = 174;
-                w = 142;
-                h = 142;
-                break;
-              case 1:
-                x = 0;
-                y = 0;
-                w = 750;
-                h = 1334;
-                break;
-              case 2:
-                x = 255;
-                y = 825;
-                w = 240;
-                h = 240;
-                break;
-              case 3:
-                var qrImg = $('.qrcode img').attr('src');
-                if (!qrImg) return alert('二维码生成失败~');
-                data[3] = qrImg;
-                x = 266;
-                y = 836;
-                w = 218;
-                h = 218;
-                break;
-              case 4:
-                x = 348;
-                y = 918;
-                w = 57;
-                h = 57;
-                break;
-            }
-            var img=new Image;
-            img.crossOrigin = 'Anonymous'; //解决跨域
-            img.src=data[n];
-            img.onload=function(){
-              ctx.drawImage(img, x, y, w, h);
-              drawing(n+1);//递归
-            }
-          }else{
-            //保存生成作品图片
-            base64.push(c.toDataURL("image/jpeg",0.8));
-            fn && fn(c.toDataURL("image/jpeg",0.8))
-          }
-        }
-        drawing(0);
-      }
-    })()
-  </script>
+  <script src="./js/index.js"></script>
 </html>
