--- a/src/fools/index.html
+++ b/src/fools/index.html
@@ -11,6 +11,8 @@
   <title>脱单联盟</title>
   <link rel="stylesheet" href="./css/index.css?111">
   <script src="./js/jquery.1.8.2.min.js"></script>
+  <script src="./js//preloadjs.js"></script>
+	<script src="./js//soundjs.js"></script>
   <script src="./js/qrcode.js"></script>
   <script>
     (function (window, document) {
@@ -32,7 +34,7 @@
     <div class="page page1" id="page1">
       <div class="chatListBox">
         <div class="chatBox">
-          <div class="newsList newsList1 active">
+          <div class="newsList newsList1">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -67,7 +69,7 @@
               </div>
             </div>
           </div>
-          <div class="newsList newsList2">
+          <div class="newsList newsList2 active">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -140,7 +142,7 @@
               </div>
               <div class="msg">
                   <span class="msgBox">
-                      算你狠！有胆你也试试你朋友怎么说你！<a class="link link2">点击生成你的专属答题码</a>
+                      算你狠！有胆你也试试你朋友怎么说你！<a href="javascript:;" class="link link2">点击生成你的专属答题码</a>
                     <div class="triangle"></div>
                   </span>
               </div>
@@ -214,7 +216,7 @@
     <div class="page page2" id="page2">
       <div class="chatListBox">
         <div class="chatBox">
-          <div class="newsList newsList1 active">
+          <div class="newsList newsList1 ">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -249,7 +251,7 @@
               </div>
             </div>
           </div>
-          <div class="newsList newsList2">
+          <div class="newsList newsList2 active">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -395,7 +397,7 @@
     <div class="page page3" id="page3">
       <div class="chatListBox">
         <div class="chatBox">
-          <div class="newsList newsList1 active">
+          <div class="newsList newsList1">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -430,7 +432,7 @@
               </div>
             </div>
           </div>
-          <div class="newsList newsList2">
+          <div class="newsList newsList2 active">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -576,7 +578,7 @@
     <div class="page page4" id="page4">
       <div class="chatListBox">
         <div class="chatBox">
-          <div class="newsList newsList1 active">
+          <div class="newsList newsList1">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -611,7 +613,7 @@
               </div>
             </div>
           </div>
-          <div class="newsList newsList2">
+          <div class="newsList newsList2 active">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -757,7 +759,7 @@
     <div class="page page5" id="page5">
       <div class="chatListBox">
         <div class="chatBox">
-          <div class="newsList newsList1 active">
+          <div class="newsList newsList1">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
@@ -792,7 +794,7 @@
               </div>
             </div>
           </div>
-          <div class="newsList newsList2">
+          <div class="newsList newsList2 active">
             <div class="newsItem fadeIn animated left">
               <div class="photo">
                 <img src="./images/photo1.png" alt="">
