插件本地化

--- a/src/jeep/index.html
+++ b/src/jeep/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./css/index.css">
 
   <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-  <script src="http://js.tarsocial.com/h5stat-2.1.1.js"></script>
+  <script src="./js/h5stat-2.1.1.js"></script>
   <script src="./js/jquery.1.8.2.min.js"></script>
   <script src="./js/preloadjs.js"></script>
   <script src="./js/soundjs.js"></script>
