--- a/src/jeep/index.html
+++ b/src/jeep/index.html
@@ -89,7 +89,7 @@
     </div>
     <div class="page page03 down">
       <img src="./images/page03-01.png" class="page03-01">
-      <img src="./images/kaka.png" class="kaka">
+      <!-- <img src="./images/kaka.png" class="kaka"> -->
       <img src="./images/page03-03.png" class="page03-03">
       <img src="./images/page03-02.png" class="page03-02">
     </div>
@@ -101,7 +101,9 @@
     <div class="page page05 down">
       <img src="./images/page05-01.png" class="page05-01">
       <img src="./images/page05-02.png" class="page05-02">
-      <img src="./images/page05-03.png" class="page05-03">
+      <!-- <img src="./images/page05-03.png" class="page05-03"> -->
+      <div class="guang1"></div>
+      <div class="guang2"></div>
     </div>
     <div class="page page06 down">
       <img src="./images/page06-01.png" class="page06-01">
