--- a/src/jeep/index.html
+++ b/src/jeep/index.html
@@ -165,14 +165,17 @@
       <div class="message">
         <div class="tip">
           <img src="./images/privilege.png">
-          <div class="detail">
+          <a class="detail" href="http://parts.jeep.com.cn/goods/234?spm=03.a393.p393.pa393&mz_ca=2073580&mz_sp=7Dz4A">
             <img src="./images/detail.png">
-          </div>
+          </a>
           <div class="close">
             <img src="./images/close.png">
           </div>
         </div>
       </div>
+    </div>
+    <div class="cover cover4">
+      <img src="./images/share-img.png" alt="">
     </div>
   </body>
   <script src="./js/index.js"></script>
