修改兼容性

--- a/src/jeep/index.html
+++ b/src/jeep/index.html
@@ -37,7 +37,7 @@
   </script>
 </head>
   <body>
-    <div id="audio_btn" class="video_exist rotate">
+    <div id="audio_btn" class="video_exist">
         <audio loop="" src="./media/bgm.mp3" id="media" preload=""></audio>
     </div>
     <div id="audio_btn1" class="video_exist off">
