--- a/src/wangfuji/home.html
+++ b/src/wangfuji/home.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <!-- home -->
-    <div class="page1">
+    <div class="page page1">
       <!-- 公共头部 -->
       <div class="nav_main">
         <div class="home"></div>
