--- a/src/wangfuji/buy.html
+++ b/src/wangfuji/buy.html
@@ -10,6 +10,7 @@
   <meta http-equiv="Expires" content="0" />
   <title>王福记猪肉脯</title>
   <link rel="stylesheet" href="./css/index.css">
+  <link href="https://cdn.bootcss.com/Swiper/4.2.2/css/swiper.min.css" rel="stylesheet">
   <script>
     (function (window, document) {
       var setRem = function () {
@@ -46,19 +47,72 @@
     <!-- buy -->
     <div class="page">
       <div class="wrap">
-        <div class="commodity-box">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="commodity-box">
+                      <div class="commodity">
+                        <div class="photo">
+                          <img src="./images/bottle2.png" />
+                        </div>
+                        <div class="describe">王福记猪肉脯（酥香）
+                          <span>￥
+                            <span>80.00</span>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="commodity-box">
+                      <div class="commodity">
+                        <div class="photo">
+                          <img src="./images/bottle2.png" />
+                        </div>
+                        <div class="describe">王福记猪肉脯（酥香）111
+                          <span>￥
+                            <span>90.00</span>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="commodity-box">
+                      <div class="commodity">
+                        <div class="photo">
+                          <img src="./images/bottle2.png" />
+                        </div>
+                        <div class="describe">王福记猪肉脯（酥香）222
+                          <span>￥
+                            <span>100.00</span>
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 如果需要导航按钮 -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+        <!-- <div class="commodity-box">
           <div class="commodity">
             <div class="photo">
               <img src="./images/bottle2.png" />
             </div>
-            <div class="describe">王福记猪肉脯（酥香）<span>￥<span>80.00</span></span></div>
+            <div class="describe">王福记猪肉脯（酥香）
+              <span>￥
+                <span>80.00</span>
+              </span>
+            </div>
           </div>
-        </div>
+        </div> -->
         <div class="btns">
-          <a href="javascript:;" class="btn">
+          <a href="javascript:;" class="btn btn1">
             <img src="./images/btn_pay4.png" />
           </a>
-          <a href="javascript:;" class="btn">
+          <a href="javascript:;" class="btn btn2">
             <img src="./images/btn_pay5.png" />
           </a>
         </div>
@@ -96,7 +150,30 @@
       </div>
     </div>
     <script src="./js/jquery-1.11.0.min.js"></script>
+    <script src="./js/swiper.min.js"></script>
     <script src="./js/index.js"></script>
+    <script>
+      (function () {
+        $(function () {
+          var swiper = new Swiper('.swiper-container', {
+              slidesPerView: 'auto',
+              navigation: {
+              nextEl: '.swiper-button-next',
+              prevEl: '.swiper-button-prev',
+            },
+          });
+
+          // 立即购买
+          $(".page .btns").on("click", ".btn1", function () {
+            window.location.href = "pay.html";
+          });
+          // 立即定制
+          $(".page .btns").on("click", ".btn2", function () {
+            window.location.href = "home.html";
+          });
+        });
+      })();
+    </script>
 </body>
 
 </html>
